--- a/data/equipment/consumable-13-QImdOdyolrMWwuxD.htm
+++ b/data/equipment/consumable-13-QImdOdyolrMWwuxD.htm
@@ -1,7 +1,6 @@
 Name: Gorgon's Breath
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Souffle de Gorgone
+État: libre
 
 ------ Description (en) ------
 <p>Gorgon's breath is a fine powder that can easily enter living creatures' bloodstreams through their lungs before binding to mucous membranes and causing any nearby soft tissues to harden.</p>
@@ -15,13 +14,13 @@ Nom:
 <p><strong>Stage 3</strong> @Compendium[pf2e.conditionitems.dTwPJuKgBQCMxixg]{Petrified} (1 round)</p>
 <p><strong>Stage 4</strong> petrified permanently</p>
 ------ Description (fr) ------
-Le souffle de la Gorgone est une poudre fine qui pénètre facilement dans le sang des créatures vivantes par les poumons avant de se fixer aux muqueuses et de durcir les tissus mous à proximité ;
+Le souffle de la Gorgone est une poudre fine qui pénètre facilement dans le sang des créatures vivantes par les poumons avant de se fixer aux muqueuses et de durcir les tissus mous à proximité.
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact (Inhaled)</p>
-<p><strong>Jet de sauvegarde</strong> DC 32 Force</p>
+<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir (Inhalé)</p>
+<p><strong>Jet de sauvegarde</strong> DD 32 Vigueur</p>
 <p><strong>Début</strong> 1 round</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Étape 1</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Slowed} 1 (1 round)</p>
-<p><strong>Stage 2</strong> [[/r 4d6#battage]] dégâts de matraquage et ralentissement de 1 (1 round)</p>
-<p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.dTwPJuKgBQCMxixg]{Petrified} (1 round)</p>
-<p><strong>Stade 4</strong> pétrifié définitivement</p>
+<p><strong>Étape 1</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 (1 round)</p>
+<p><strong>Stage 2</strong> [[/r 4d6#bludgeoning]] points de dégâts contondants et Ralenti 1 (1 round)</p>
+<p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.dTwPJuKgBQCMxixg]{Pétrifié} (1 round)</p>
+<p><strong>Stade 4</strong> Pétrifié définitivement</p>
