--- a/data/equipment/consumable-13-C0Zhu7Vwy9Aipwoh.htm
+++ b/data/equipment/consumable-13-C0Zhu7Vwy9Aipwoh.htm
@@ -1,7 +1,6 @@
 Name: Spectral Nightshade
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Belladonne spectrale
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact;</p>
@@ -17,13 +16,13 @@ Nom:
 <p>Craft Requirements Supply one casting of @Compendium[pf2e.spells-srd.PHVHBbdHeQRfjLmE]{Spirit Blast}.</p>
 ------ Description (fr) ------
 <p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact;</p>
-<p>Les Belladonna cultivées dans des plans dangereux pour les visiteurs vivants, comme le Plan de l'Ombre ou le Boneyard, poussent avec un aspect étrange et squelettique à leurs branches. Les feuilles et les baies de ces plantes extraplanaires sont en partie incorporelles et nettement plus toxiques que la belladone cultivée sur le plan matériel. Lorsqu'elle est imprégnée de magie tordant l'esprit, la morelle spectrale draine rapidement la vitalité de la victime et rend les couleurs douloureusement vives et déroutantes. Ombre Nocturne spectrale n'affecte pas les créatures qui n'ont pas d'esprit ; si l'esprit d'un possesseur habite un corps qui subit des dégâts de poison par Ombre Nocturne spectrale, le possesseur subit une quantité égale de dégâts de force, même s'il ne peut pas être affecté directement par les poisons ;
+<p>Les belladonnes spectrales sont cultivées dans des plans dangereux pour les visiteurs vivants, comme le Plan de l'Ombre ou le Cimetière. Leurs branches sont d'un aspect étrange et squelettique. Les feuilles et les baies de ces plantes extraplanaires sont en partie incorporelles et nettement plus toxiques que la belladone cultivée sur le plan matériel. Lorsqu'elle est imprégnée de magie affectant l'esprit, la belladonne spectrale draine rapidement la vitalité de la victime et rend les couleurs douloureusement vives et déroutantes. La belladonne spectrale n'affecte pas les créatures qui n'ont pas d'esprit. Si l'esprit d'un possesseur habite un corps qui subit des dégâts de poison de belladonne spectrale, le possesseur subit une quantité égale de dégâts de force, même s'il ne peut pas être affecté directement par les poisons.
 <hr />
-<p><strong>Jet de sauvegarde</strong> DC 33 Fortitude;</p>
-<p><strong>Début</strong> 1 minute;</p>
-<p><strong>Durée maximale</strong> 6 minutes;</p>
-<p><strong>Stade 1</strong> [[/r 10d6 #poison]] dégâts de poison et @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{ébloui}(1 minute);</p>
-<p><strong>Stade 2</strong> [[/r 13d6 #poison]] dégâts de poison et @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1 (1 minute);</p>
-<p><strong>Stade 3</strong> [[/r 15d6 #poison]] dégâts de poison, @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confusion}, et drainé 2 (1 minute)</p>
+<p><strong>Jet de sauvegarde</strong> DD 33 Vigueur</p>
+<p><strong>Début</strong> 1 minute</p>
+<p><strong>Durée maximale</strong> 6 minutes</p>
+<p><strong>Stade 2</strong> [[/r 13d6 #poison]] points de dégâts poison et @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1 (1 minute)</p>
+<p><strong>Stade 1</strong> [[/r 10d6 #poison]] points de dégâts poison et @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Ébloui}(1 minute)</p>
+<p><strong>Stade 3</strong> [[/r 15d6 #poison]] dégâts de poison, @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus}, et Drainé 2 (1 minute)</p>
 <hr />
-<p>Exigences de craft Fournir un casting de @Compendium[pf2e.spells-srd.PHVHBbdHeQRfjLmE]{Spirit Blast}.</p>
+<p>Conditions de fabrication: Fournir un sort de @Compendium[pf2e.spells-srd.PHVHBbdHeQRfjLmE]{Coup spirituel}.</p>
