--- a/data/equipment/consumable-14-mJSCOIJllj2GtACC.htm
+++ b/data/equipment/consumable-14-mJSCOIJllj2GtACC.htm
@@ -1,7 +1,6 @@
 Name: Grinning Pugwampi
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Pugwampi ricanant
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> envision</p>
@@ -10,8 +9,10 @@ Nom:
 <p><strong>Effect</strong> The damaged creature must attempt a DC 33 Will save.</p>
 <p><strong>Critical Success</strong> The creature is unaffected.<br /><strong>Success</strong> The creature must roll twice and take the worse result on the next check it attempts.<br /><strong>Failure</strong> The creature must roll twice and take the worse result on all checks until the end of its next turn.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">F</span> envision</p>
-<p><strong>Déclencheur</strong> Vous infligez des dégâts à une créature aux pieds plats avec l'arme apposée</p>
-<p>Cette statuette en os d'un gremlin ricanant tombe en poussière lorsqu'elle est activée, transmettant une fraction du malheur infâme de son sujet à ceux que vous frappez.</p>
-<p><strong>Effet</strong> La créature endommagée doit tenter une sauvegarde de Volonté DC 33.</p>
-<p><strong>Succès critique</strong> La créature n'est pas affectée.<br /><strong>Succès</strong> La créature doit effectuer deux jets et prendre le plus mauvais résultat lors du prochain test qu'elle tente. <br /><strong>Échec</strong> La créature doit effectuer deux jets de dé et obtenir le pire résultat à tous ses tests jusqu'à la fin de son prochain tour.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
+<p><strong>Déclencheur</strong> Vous infligez des dégâts à une créature prise au dépourvu avec l'arme où est fixé le Pugwampi ricanant</p>
+<p>Cette statuette en os d'un Pugwampi ricanant tombe en poussière lorsqu'elle est activée, transmettant une fraction du malheur infâme de Pugwampi à celui que vous frappez.</p>
+<p><strong>Effet</strong> La créature qui subit des dégâts doit tenter un jet de sauvegarde Volonté DD 33.</p>
+<p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
+<p><strong>Succès</strong> La créature doit effectuer deux jets et prendre le plus mauvais résultat lors du prochain test qu'elle tente</p>
+<p><strong>Échec</strong> La créature doit effectuer deux jets de dé et garder le pire résultat à tous ses tests jusqu'à la fin de son prochain tour.</p>
