--- a/data/equipment/consumable-14-4dwBcqeuXePd89qW.htm
+++ b/data/equipment/consumable-14-4dwBcqeuXePd89qW.htm
@@ -7,4 +7,4 @@ Nom:
 <p>You can fire at any creature you can detect, regardless of range. The arrow travels instantly, hitting your target as soon as you fire the arrow. This is a <em>teleportation </em>effect.</p>
 ------ Description (fr) ------
 Le métal de ces flèches proviendrait d'une étoile qui se serait aventurée trop près de Golarion et qui aurait été abattue par un archer au clair de lune. Lorsque vous activez et tirez une flèche étoilée, vous ne subissez aucune pénalité de distance contre toute cible que vous pouvez personnellement détecter. Il doit y avoir une ligne d'effet entre vous et la cible.</p>
-<p>Vous pouvez tirer sur toute créature que vous pouvez détecter, quelle que soit sa portée. La flèche se déplace instantanément, touchant votre cible dès que vous tirez la flèche. Il s'agit d'un effet de <em>téléportation </em></p>
+<p>Vous pouvez tirer sur toute créature que vous pouvez détecter, quelle que soit sa portée. La flèche se déplace instantanément, touchant votre cible dès que vous tirez la flèche. Il s'agit d'un effet de téléportation.</p>
