--- a/data/equipment/consumable-14-4dwBcqeuXePd89qW.htm
+++ b/data/equipment/consumable-14-4dwBcqeuXePd89qW.htm
@@ -1,6 +1,6 @@
 Name: Starshot Arrow (Greater)
-Nom: 
-État: auto-trad
+Nom: Flèche étoile (supérieur)
+État: libre
 
 ------ Description (en) ------
 <p>The metal of these arrows is said to have come from a star that ventured too close to Golarion and was shot down by a moonlit archer. When you activate and shoot a starshot arrow, you take no range penalties against any target that you can personally detect. There must be a line of effect between you and the target.</p>
