--- a/data/equipment/consumable-07-HUPCdlFkJQC7Krim.htm
+++ b/data/equipment/consumable-07-HUPCdlFkJQC7Krim.htm
@@ -7,4 +7,4 @@ Nom: Flèche étoile (inférieur)
 <p>The target must be within the maximum range of your weapon.</p>
 ------ Description (fr) ------
 Le métal de ces flèches proviendrait d'une étoile qui se serait aventurée trop près de Golarion et qui aurait été abattue par un archer au clair de lune. Lorsque vous activez et tirez une flèche étoile, vous ne subissez aucune pénalité de distance contre toute cible que vous pouvez personnellement détecter. Il doit y avoir une ligne d'effet entre vous et la cible.</p>
-La cible doit se trouver dans la portée maximale de votre arme.</p>
+<p>La cible doit se trouver dans la portée maximale de votre arme.</p>
