--- a/data/classfeatures/sorcerer-01-ZHabYxSgYK0XbjhM.htm
+++ b/data/classfeatures/sorcerer-01-ZHabYxSgYK0XbjhM.htm
@@ -1,7 +1,6 @@
 Name: Bloodline: Draconic
 Nom: Lignage : Draconique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The blood of dragons flows through your veins. These beasts are both fearsome in combat and skilled at magic</p>
@@ -16,7 +15,14 @@ Nom: Lignage : Draconique
 <p>The good metallic dragons and their damage types are brass (fire), bronze (electricity), copper (acid), gold (fire), and silver (cold).</p>
 <p>The evil chromatic dragons and their damage types are black (acid), blue (electricity), green (poison), red (fire), and white (cold).</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Le sang des dragons coule dans vos veines. Ces bêtes sont à la fois redoutables en combat et compétentes en matière de magie.</span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Liste de sorts</strong> <a href="https://2e.aonprd.com/Spells.aspx?Tradition=1"><u>arcaniques</u></a><br><strong>Compétences de lignage</strong> <a href="https://2e.aonprd.com/Skills.aspx?ID=2"><u>Arcanes</u></a>, <a href="https://2e.aonprd.com/Skills.aspx?ID=7"><u>Intimidation</u></a><br><strong>Sorts accordés</strong> tour de magie @Compendium[pf2e.spells-srd.TVKNbcgTee19PXZR]{bouclier}, 1 : @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{coup au but}, 2 : @Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{résistance à l’énergie}, 3 : @Compendium[pf2e.spells-srd.o6YCGx4lycsYpww4]{rapidité}, 4 : @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}, 5 : @Compendium[pf2e.spells-srd.forsqeofEszBNtLq]{mur chromatique}, 6 : @Compendium[pf2e.spells-srd.5c692cCcTDXjSEzk]{forme de dragon}, 7 : @Compendium[pf2e.spells-srd.O6VQC1Bs4aSYDa6R]{masque terrifiant}, 8 : @Compendium[pf2e.spells-srd.iL6TujgTCtRRa0Y0]{mur prismatique}, 9 : @Compendium[pf2e.spells-srd.fkDeKktdmbeplYRY]{présence écrasante}<br><strong>Sorts de lignage</strong> initial: @Compendium[pf2e.spells-srd.K8vvrOgW4bGakXxm]{griffes de dragon}, avancé: @Compendium[pf2e.spells-srd.JcobNl4iE9HmMYtE]{souffle de dragon}, supérieur: @Compendium[pf2e.spells-srd.HWJODX2zPg5cg34F]{ailes de dragon}<br><strong>Magie du sang</strong> Des écailles de dragon poussent sur votre corps ou celui d’une cible en conférant un bonus de statut de +1 à la CA pendant 1 round.<br></span></p>
-<h2 class="title">Type de dragon</h2>
-<p>Au niveau 1, choisissez le type de dragon qui a influencé votre lignée. Vous ne pouvez plus en changer une fois ce choix fait. Il affecte la façon dont fonctionnent vos sorts de lignage. Les dragons métalliques bienveillants et le type de dégâts qu’ils infligent sont airain (feu), bronze (électricité), cuivre (acide), or (feu) et argent (froid). Les dragons chromatiques malfaisants et le type de dégâts qu’ils infligent sont noir (acide), bleu (électricité), vert (poison), rouge (feu) et blanc (froid).</p>
+<p>Le sang des dragons coule dans vos veines. Ces bêtes sont à la fois redoutables en combat et compétentes en matière de magie.</p>
+<p><strong>Liste de sorts</strong> arcanique</p>
+<p><strong>Compétences de lignage</strong> Arcanes, Intimidation</p>
+<p><strong>Sorts accordés</strong> tour de magie @Compendium[pf2e.spells-srd.TVKNbcgTee19PXZR]{Bouclier}, 1er: @Compendium[pf2e.spells-srd.Gb7SeieEvd0pL2Eh]{Coup au but}, 2e: @Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Résistance à l’énergie}, 3: @Compendium[pf2e.spells-srd.o6YCGx4lycsYpww4]{Rapidité}, 4e: @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{Immunité contre les sorts}, 5e: @Compendium[pf2e.spells-srd.forsqeofEszBNtLq]{Mur chromatique}, 6e: @Compendium[pf2e.spells-srd.5c692cCcTDXjSEzk]{Forme de dragon}, 7e: @Compendium[pf2e.spells-srd.O6VQC1Bs4aSYDa6R]{Masque terrifiant}, 8e: @Compendium[pf2e.spells-srd.iL6TujgTCtRRa0Y0]{Mur prismatique}, 9e: @Compendium[pf2e.spells-srd.fkDeKktdmbeplYRY]{Présence écrasante}</p>
+<p><strong>Sorts de lignage</strong> initial : @Compendium[pf2e.spells-srd.K8vvrOgW4bGakXxm]{Griffes de dragon}, avancé : @Compendium[pf2e.spells-srd.JcobNl4iE9HmMYtE]{Souffle de dragon}, supérieur : @Compendium[pf2e.spells-srd.HWJODX2zPg5cg34F]{Ailes de dragon}</p>
+<p><strong>Magie du sang</strong> Des écailles de dragon poussent sur votre corps ou celui d’une cible en conférant un bonus de statut de +1 à la CA pendant 1 round.</p>
+<p>@Compendium[pf2e.feature-effects.FNTTeJHiK6iOjrSq]{Effet: Magie du sang draconique}</p>
+<h2>Type de dragon</h2>
+<p>Au niveau 1, choisissez le type de dragon qui a influencé votre lignée. Vous ne pouvez plus en changer une fois ce choix fait. Il affecte la façon dont fonctionnent vos sorts de lignage.</p>
+<p>Les dragons métalliques bienveillants et le type de dégâts qu’ils infligent sont airain (feu), bronze (électricité), cuivre (acide), or (feu) et argent (froid).</p>
+<p>Les dragons chromatiques malfaisants et le type de dégâts qu’ils infligent sont noir (acide), bleu (électricité), vert (poison), rouge (feu) et blanc (froid).</p>
