--- a/data/equipment/consumable-11-Cc4SokzVBoBCkHId.htm
+++ b/data/equipment/consumable-11-Cc4SokzVBoBCkHId.htm
@@ -1,7 +1,6 @@
 Name: Blightburn Resin
 Nom: Résine de champibrûle
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This tacky, hardened sap is harvested from trees infected by fungal blights and exposed to open flames.</p>
@@ -14,8 +13,8 @@ Nom: Résine de champibrûle
 <p><strong>Stage 2</strong> [[/r 10d6#poison]] poison damage (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 15d6#poison]] poison damage (1 round)</p>
 ------ Description (fr) ------
-<p><span>Cette résine poisseuse solidifiée est recueillie sur des arbres contaminés par un champignon puis exposée à une flamme nue.*
-    <p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Contact)</p> 
+<p><span>Cette résine poisseuse solidifiée est recueillie sur des arbres contaminés par un champignon puis exposée à une flamme nue.
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Contact)</p> (Contact)</p> 
 <p><strong>Jet de sauvegarde</strong> Vigueur DD 31 ;</p>
 <p><strong>Délai</strong> 1 minute; </p>
 <p><strong>Durée maximum </strong> 6 rounds;</p> 
