--- a/data/equipment/consumable-16-tnCKwIsRsKj3FtG6.htm
+++ b/data/equipment/consumable-16-tnCKwIsRsKj3FtG6.htm
@@ -1,6 +1,6 @@
 Name: Omnidirectional Spear Snare
-Nom: 
-État: auto-trad
+Nom: Piège de lances directionnelles
+État: libre
 
 ------ Description (en) ------
 <p><span>As soon as a creature enters the snare's square, the snare unleashes wickedly powerful spears at the creature from all directions, dealing 19d8 piercing damage (DC 37 basic Reflex). </span></p>
