--- a/data/equipment/consumable-07-TSbuKm91qmqdqQW3.htm
+++ b/data/equipment/consumable-07-TSbuKm91qmqdqQW3.htm
@@ -10,7 +10,7 @@ Nom: Goutte Putride
 <hr />
 <p>This repulsive, hairy glob dangles from the end of your weapon. When you activate the putrescent glob, the creature you damaged must succeed at a DC 23 Fortitude save or its sickened condition increases to sickened 2, and it can't reduce its sickened condition until the end of its next turn. On a critical failure, it's also @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Slowed} 1 until the end of its next turn.</p>
 ------ Description (fr) ------
-<p><strong>Usage</strong> apposé sur une arme</p>
+<p><strong>Utilisation</strong> Fixé sur une arme</p>
 <p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
 <p><strong>Déclencheur</strong> Vous infligez des dégâts à une créature qui est @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1 avec une action de @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} en utilisant l'arme sur laquelle est fixée la goutte putride</p>
 <p><strong>Conditions</strong> Vous êtes un expert avec l'arme sur laquelle est fixée la goutte putride;</p>
