--- a/data/equipment/consumable-07-VwzIiWAtbJCgGOEz.htm
+++ b/data/equipment/consumable-07-VwzIiWAtbJCgGOEz.htm
@@ -16,7 +16,7 @@ Nom: Breuvage d'isolement
 Dérivé de la macération de noyaux de prunes toxiques des hauts plateaux dans des alcools de grain raffinés, ce tonique clair éteint lentement les sens de celui qui l'a bu.
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Ingéré)</p>
-<p><strong>Jet de sauvegarde</strong> DD 25 Vigueur</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 25 </p>
 <p><strong>Début</strong> 10 minutes</p>
 <p><strong>Durée maximale</strong> 30 minutes</p>
 <p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Ébloui}, -3 à tous les tests de Perception (1 minute)</p>
