--- a/data/equipment/consumable-01-eHVZBmtzEcnsHSk8.htm
+++ b/data/equipment/consumable-01-eHVZBmtzEcnsHSk8.htm
@@ -10,7 +10,7 @@ Nom: Élixir d'Incrédule (inférieur)
 <p>@Compendium[pf2e.consumable-effects.5Gof60StUppR2Xn9]{Effect: Skeptic's Elixir (Lesser)}</p>
 ------ Description (fr) ------
 <p><strong>Durée</strong> 1 minute</p>
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <hr />
-<p>Cet élixir aiguise votre esprit et vous permet de voir à travers les mensonges, les faussetés et les supercheries magiques. Vous gagnez un bonus d'objet de +1 aux tests de Perception et aux DD de Perception pour remarquer les mensonges, qu'il s'agisse de mensonges parlés ou de tromperies écrites. Vous gagnez ce même bonus d'objet aux jets de sauvegardes de Volonté.</p>
-<p>@Compendium[pf2e.consumable-effects.5Gof60StUppR2Xn9]{Effet : Élixir d'Incrédule (inférieur)}</p>
+<p>Cet élixir aiguise votre esprit et vous permet de voir à travers les mensonges, les faussetés et les supercheries magiques. Vous gagnez un bonus d'objet de +1 aux tests de Perception et aux DD de Perception pour remarquer les mensonges, qu'il s'agisse de mensonges parlés ou de tromperies écrites. Vous gagnez ce même bonus d'objet aux jets de sauvegarde Volonté.</p>
+<p>@Compendium[pf2e.consumable-effects.5Gof60StUppR2Xn9]{Effet: Élixir d'Incrédule (inférieur)}</p>
