--- a/data/equipment/consumable-18-bEaiID2KLQ8lTCai.htm
+++ b/data/equipment/consumable-18-bEaiID2KLQ8lTCai.htm
@@ -9,4 +9,4 @@ Nom: Potion de Riposte Électrique (majeure)
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Pendant 1 minute après avoir bu une potion de Riposte électrique, vous rayonnez d'une faible aura d'énergie électrique, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts d'électricité.</p>
-<p>L'aura inflige 4d8 points de dégât d'électricité.</p>
+<p>L'aura inflige 4d8 points de dégât électricité.</p>
