--- a/data/equipment/consumable-06-oDfucsKeWpJmmWN1.htm
+++ b/data/equipment/consumable-06-oDfucsKeWpJmmWN1.htm
@@ -9,5 +9,5 @@ Nom: Potion de Riposte Électrique (modérée)
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Pendant 1 minute après avoir bu une potion de Riposte électrique, vous rayonnez d'une faible aura d'énergie électrique, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts d'électricité.</p>
-<p>L'aura inflige 2d4 points de dégâts d'électricité.</p>
+<p>L'aura inflige 2d4 points de dégâts électricité.</p>
 
