--- a/data/equipment/equipment-08-nZE16PtiyY7DWlzd.htm
+++ b/data/equipment/equipment-08-nZE16PtiyY7DWlzd.htm
@@ -1,7 +1,6 @@
 Name: Lover's Gloves
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Gants de l'Amant
+État: libre
 
 ------ Description (en) ------
 <p>These white silk gloves are adorned in red hearts that glow faintly whenever you are adjacent to someone you feel particularly strongly toward. They buoy your spirit, giving you a +1 item bonus to Diplomacy checks.</p>
@@ -16,10 +15,10 @@ Nom:
 </ul>
 ------ Description (fr) ------
 <p>Ces gants de soie blancs sont ornés de cœurs rouges qui brillent faiblement lorsque vous êtes à côté d'une personne pour laquelle vous éprouvez un sentiment particulier. Ils soutiennent votre esprit, vous donnant un bonus d'objet de +1 aux tests de Diplomatie.</p>
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact;</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p><strong>Fréquence</strong> une fois par jour;</p>
 <p><strong>Effet</strong> Vous saisissez les mains d'une créature consentante pour laquelle vous éprouvez de forts sentiments positifs, quelle que soit la nature de ces sentiments. La créature gagne un bonus de statut de +1 aux jets de sauvegarde et 10 points de vie temporaires pendant 10 minutes. Si la créature partage vos sentiments, vous obtenez les mêmes avantages, et pour la durée, lorsque vous obtenez tous les deux un succès à un jet de sauvegarde contre un effet d'émotion qui provoque des émotions négatives, vous obtenez tous les deux un succès critique à la place.</p>
-<p>@Compendium[pf2e.equipment-effects.3O5lvuX4VHqtpCkU]{Effet : Gants de l'Amoureux}</p>
+<p>@Compendium[pf2e.equipment-effects.3O5lvuX4VHqtpCkU]{Effet: Gants de l'Amant}</p>
 <hr />
 <p>Effets appliqués automatiquement:</p>
 <ul>
