--- a/data/equipment/consumable-02-bJVk50mhaODgsOUe.htm
+++ b/data/equipment/consumable-02-bJVk50mhaODgsOUe.htm
@@ -14,7 +14,7 @@ Nom: Poison de Moisissure Jaune
 Le pollen en poudre d'une liane musquée jaune embrouille l'esprit.
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Inhalé)</p>
-<p><strong>Jet de sauvegarde</strong> DD 16 Volonté</p>
-<p><strong>Durée maximale</strong> 2 rounds</p>
+<p><strong>Jet de sauvegarde</strong> Volonté DD 16;</p>
+<p><strong>Durée maximale</strong> 2 rounds;</p>
 <p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.AdPVz7rbaVSRxHFg]{Fasciné} par le nuage de poison (1 round)</p>
 <p><strong>Stade 2</strong> Fasciné par le nuage de poison, et ne peut utiliser d'autres actions que de se rapprocher du point d'origine du nuage (1 round).</p>
