--- a/data/feats/class-04-zilwynzk8lIujgZo.htm
+++ b/data/feats/class-04-zilwynzk8lIujgZo.htm
@@ -2,12 +2,11 @@ Name: Mercy
 Nom: Soulagement
 PrereqEN: devotion spell (lay on hands)
 PrereqFR: sort de dévotion (imposition des mains)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your touch relieves fear and restores movement.
-Avantage: Votre contact apaise les peurs et restaure les capacités de déplacement
+Avantage: Imposition des mains contre un effet de terreur ou qui Paralyse un allié.
 
 ------ Description (en) ------
 <p>Your touch relieves fear and restores movement.</p>
