--- a/data/equipment/consumable-02-NSQOijKqomyotXkj.htm
+++ b/data/equipment/consumable-02-NSQOijKqomyotXkj.htm
@@ -8,5 +8,5 @@ Nom: Flèche Bois-de-cerf
 <p>If the hit with the <em>antler arrow</em> is a critical hit and you have access to the bow critical specialization effect, the DC of the Athletics check increases to 15.</p>
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Intertagir</p>
-<p>La création de ces flèches a été inspirée par une rencontre avec un éclaireur Archonte cornu qui cherchait à maîtriser pacifiquement ses ennemis. Lorsqu'une flèche de Bois-de-cerf activée touche une cible, les ramures d'os s'étendent pour la clouer à la surface. La cible doit réussir une sauvegarde de Réflexes DD 16 ou rester bloqué à la surface, subissant les effets critiques de spécialisation d'un arc.</p>
-<p>Si le coup porté par la flèche Bois-de-cerf est un coup critique et que vous avez accès à l'effet de spécialisation critique de l'arc, le DC du test d'Athlétisme passe à 15.</p>
+<p>La création de ces flèches a été inspirée par une rencontre avec un éclaireur Archonte cornu qui cherchait à maîtriser pacifiquement ses ennemis. Lorsqu'une flèche de Bois-de-cerf activée touche une cible, les ramures d'os s'étendent pour la clouer à la surface. La cible doit réussir un jet de sauvegarde Réflexes DD 16 ou rester bloqué à la surface, subissant les effets critiques de spécialisation d'un arc.</p>
+<p>Si le coup porté par la flèche Bois-de-cerf est un coup critique et que vous avez accès à l'effet de spécialisation critique de l'arc, le DD du test d'Athlétisme passe à 15.</p>
