--- a/data/equipment/consumable-03-5KYn9J1Hj4IG3Z0X.htm
+++ b/data/equipment/consumable-03-5KYn9J1Hj4IG3Z0X.htm
@@ -8,7 +8,7 @@ Nom: Bouton de Feuille
 <p>This small, crystalline carving takes the shape of a tree leaf and attaches to armor or clothing with a simple strap.</p>
 <p>When you activate the <em>snapleaf</em>, you gain the benefits of @Compendium[pf2e.spells-srd.TTwOKGqmZeKSyNMH]{Feather Fall} and a 2nd-level @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibility} spell for 1 minute or until you stop falling, whichever comes first.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span class="pf2-icon">R</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">R</span> Interagir</p>
 <p><strong>Déclencheur</strong> Vous commencez à tomber</p>
 <p>Cette petite sculpture cristalline prend la forme d'une feuille d'arbre et se fixe à une armure ou à un vêtement à l'aide d'une simple sangle</p>
-<p>Lorsque vous activez le <em>snapleaf</em>, vous gagnez les bénéfices du sort @Compendium[pf2e.spells-srd.TTwOKGqmZeKSyNMH]{Feuille morte} et du sort de 2ème niveau @Compendium[pf2e. spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} pendant 1 minute ou jusqu'à ce que vous cessiez de tomber, selon qui vient en premier.
+<p>Lorsque vous activez le bouton de feuille, vous gagnez les bénéfices du sort @Compendium[pf2e.spells-srd.TTwOKGqmZeKSyNMH]{Feuille morte} et du sort de @Compendium[pf2e. spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} de niveau 2 pendant 1 minute ou jusqu'à ce que vous cessiez de tomber, selon qui vient en premier.
