--- a/data/feats/class-08-2tUdsoPEnW9yS8so.htm
+++ b/data/feats/class-08-2tUdsoPEnW9yS8so.htm
@@ -2,14 +2,12 @@ Name: Tangled Forest Stance
 Nom: Posture de la forêt enchevêtrée
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You extend your arms like gnarled branches to interfere with your foes’ movements.
 Avantage: Vous étendez vos bras comme des branches noueuses pour gêner les mouvements de vos ennemis.
------- Benefits and spoiler ----
-Avantage: Vous étendez vos bras comme des branches noueuses pour gêner les mouvements de vos ennemis.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are unarmored</p>
 <hr />
@@ -19,5 +17,5 @@ Avantage: Vous étendez vos bras comme des branches noueuses pour gêner les mou
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous ne portez aucune armure.</p>
 <hr />
-<p>Vous tendez vos bras, telles des branches noueuses, pour gêner les déplacements de vos adversaires. Vous pouvez faire des attaques à mains nues de branche cinglante. Ces attaques infligent 1d8 dégâts tranchants ; elles font partie du groupe pugilat et possèdent les traits agile, finesse, mains nues et non létal. Tant que vous gardez cette posture et que vous pouvez agir, chaque ennemi dans votre zone d’allonge qui tente de s’éloigner doit réussir un jet de Réflexes, un test d’Acrobaties ou un test d’Athlétisme contre votre DD de classe ou être immobilisé à cause de cette action. Vous pouvez également laisser l’ennemi se déplacer si vous préférez.</p>
+<p>Vous tendez vos bras, telles des branches noueuses, pour gêner les déplacements de vos adversaires. Vous pouvez faire des attaques à mains nues de branche cinglante. Ces attaques infligent 1d8 dégâts tranchants ; elles font partie du groupe pugilat et possèdent les traits agile, finesse, mains nues et non létal. Tant que vous gardez cette posture et que vous pouvez agir, chaque ennemi dans votre zone d’allonge qui tente de s’éloigner doit réussir un jet de Réflexes, un test d’Acrobaties ou un test d’Athlétisme contre votre DD de classe ou être @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilisé} à cause de cette action. Vous pouvez également laisser l’ennemi se déplacer si vous préférez.</p>
 <p>@Compendium[pf2e.feat-effects.PMHwCrnh9W4sMu5b]{Posture: Posture de la forêt enchevêtrée}</p>
