--- a/data/feats/class-08-8rE5zLEVe4putosB.htm
+++ b/data/feats/class-08-8rE5zLEVe4putosB.htm
@@ -2,15 +2,15 @@ Name: Fey Caller
 Nom: Celui qui appelle les fées
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You have learned some of the tricks the fey use to bend primal magic toward illusions and trickery.
-Avantage: Vous avez appris certaines des astuces que les fey utilisent pour plier la magie primitive vers les illusions et les supercheries.
+Avantage: Ajoutez Déguisement illusoire, Objet illusoire, Scène illusoire et Voile à votre liste de sorts.
 
 ------ Description (en) ------
 <p>You have learned some of the tricks the fey use to bend primal magic toward illusions and trickery.</p>
 <p>Add @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Illusory Disguise}, @Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Illusory Object}, @Compendium[pf2e.spells-srd.Ucf8eynbZMfUucjE]{Illusory Scene}, and @Compendium[pf2e.spells-srd.hkfH9Z53hPzcOwNB]{Veil} to your spell list as primal spells.</p>
 ------ Description (fr) ------
-<p>Vous avez appris certains des subterfuges utilisés par les fées et vous exploitez ce savoir pour créer des illusions et des supercheries avec la magie primordiale. Ajoutez Déguisement illusoire, Objet illusoire, Scène illusoire et Voile à votre liste de sorts primordiaux.</p>
+<p>Vous avez appris certains des subterfuges utilisés par les fées et vous exploitez ce savoir pour créer des illusions et des supercheries avec la magie primordiale.</p>
+<p>Ajoutez @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Déguisement illusoire}, @Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Objet illusoire}, @Compendium[pf2e.spells-srd.Ucf8eynbZMfUucjE]{Scène illusoire} et @Compendium[pf2e.spells-srd.hkfH9Z53hPzcOwNB]{Voile} à votre liste de sorts comme des sorts primordiaux.</p>
